--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-respo = "0.1.1"
+respo = "0.1.3"
+# respo = { path = "../rs.respo/respo" }
 serde = { version = "1.0.203", features = ["derive", "rc"] }
 serde_json = "1.0.117"
 respo_state_derive = "0.0.1"
